--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 # PyCharm stuff
 .idea/
 
+# Python stuff
+__pycache__/
+
 # macOS stuff
 .DS_store
 
@@ -12,3 +15,6 @@ weights/
 
 # tokenizer
 tokenizer/
+
+# images folder
+images/
